[BUGFIX] Photoshoot on small screen

--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -257,6 +257,7 @@
 
 @media only screen and (max-width: 1140px) {
   .banner {
+    margin-top: 0px;
     height: 300px;
     overflow: hidden;
   }
