--- a/resources/sass/_photoshoot.scss
+++ b/resources/sass/_photoshoot.scss
@@ -56,7 +56,7 @@
 
 @media only screen and (max-width: 1140px) {
     .banner {
-
+        margin-top: 0px;
         height: 300px;
         overflow: hidden;
     
